# spotify-visualizer

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: commands.rs  lib.rs  main.rs  utils.rs
