[package]
name = "spotify-visualizer"
authors = ["kadsendino"]
description = "A terminal-based Spotify visualizer written in Rust for Kitty."
repository = "https://github.com/kadsendino/spotify-visualizer"
website = "https://github.com/kadsendino/spotify-visualizer"
license = "MIT"
version = "5.0.0"
edition = "2024"

[package.metadata.aur]
depends = ["playerctl", "kitty", "curl"]
makedepends = ["pkgconf", "cargo"]
provides = ["spotify-visualizer"]

[dependencies]
crossterm = "0.29.0"
